# GraphKat

./: .gitignore  .gitmodules  .gitpod.Dockerfile  CMakeLists.txt  LICENSE  README.md  design.md  layout.xml
libraries/glad/include/glad/: glad.h
libraries/glad/src/: glad.c
shaders/: base.frag  base.vert  grapher.frag  image.frag  line.frag  marker.frag  sdf.comp  shaders.xml  text.frag  text.vert  verticalRange.frag
shaders/ui/: button.frag  slider.frag
source/: Bar.cpp  Bar.h  FontRenderer.cpp  FontRenderer.h  Foo.cpp  Foo.h  Plane.cpp  Plane.h  PointModel.cpp  PointModel.h  ProgramShader.cpp  ProgramShader.h  Shader.cpp  Texture.cpp  Texture.h  io.h  main.cpp  messages.h  testbench.cpp  testbench.h
source/dataflow/: ComputeNode.cpp  ComputeNode.h  Context.cpp  Context.h  ContextPath.cpp  ContextPath.h  Endpoint.cpp  Endpoint.h
source/evmgr/: EvMgr.cpp  EvMgr.h
source/inputs/: Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
source/nodeprims/: Layouts.cpp  Layouts.h  Math.cpp  Math.h  Rendering.cpp  Rendering.h  Shaders.cpp  Shaders.h  macro_shenanigans.h
source/ogl/: FontRenderer.cpp  FontRenderer.h  IRenderable.h  Plane.cpp  Plane.h  PointModel.cpp  PointModel.h  ProgramShader.cpp  ProgramShader.h  Shader.cpp  Shader.h  ShaderLoader.cpp  ShaderLoader.h  Texture.cpp  Texture.h  UniformType.cpp  UniformType.h
source/sdf_library/: eval.comp  object_loader.h  oct_tree.h
source/typing/: TypeInfo.cpp  TypeInfo.h  TypeInfos.h  iterator.cpp  iterator.h  templates.h
source/ui/: Button.cpp  Button.h  FMouseStateMgr.h  IKeyboardEvents.h  IMouseEvents.h  IMouseInteractable.h  IPlanePrimitive.h  IUpdateTick.h  Image.cpp  Image.h  Marker.cpp  Marker.h  SDF_Renderer.cpp  SDF_Renderer.h  Slider.cpp  Slider.h  Text.cpp  Text.h  g_uniforms.h
source/utils/: BitMap2D.cpp  BitMap2D.h  BitSet.cpp  BitSet.h  Randoms.cpp  Randoms.h  Timer.h  oct_tree.cpp  oct_tree.h  std_colors.h
source/wmgr/: LayoutConstraint.cpp  LayoutConstraint.h  LayoutManager.cpp  LayoutManager.h  WindowLayout.cpp  WindowLayout.h  layout_schema.xsd  wsize.cpp  wsize.h
